templates/wbstack-opencura-ingress_template.yaml
---
# Source: wbstack-opencura-ingress/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platform-apps-ingress-opencura
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: '*.wiki.opencura.com'
    http:
      paths:
        - path: /
          backend:
            serviceName: platform-nginx
            servicePort: 8080
  tls:
  - hosts:
    - '*.wiki.opencura.com'
    secretName: opencura-com-tls-prod
